<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/title"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt_OrderTitle"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txtRst" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtMenu"
            android:layout_width="440dp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLength="30" />

        <Button
            android:id="@+id/btn_return"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_return"
            android:textAlignment="center" />

    </LinearLayout>
</LinearLayout>